src/test/ui/issues/issue-50585.stderr
error[E0658]: `for` is not allowed in a `const`
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^
   |
   = note: see issue #87575 <https://github.com/rust-lang/rust/issues/87575> for more information
   = help: add `#![feature(const_for)]` to the crate attributes to enable

error[E0277]: the trait bound `std::ops::Range<{integer}>: Iterator` is not satisfied
  --> $DIR/issue-50585.rs:2:27
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                           ^^^^ `std::ops::Range<{integer}>` is not an iterator
   |
   = help: the trait `~const Iterator` is not implemented for `std::ops::Range<{integer}>`
note: the trait `Iterator` is implemented for `std::ops::Range<{integer}>`, but that implementation is not `const`
  --> $DIR/issue-50585.rs:2:27
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                           ^^^^
   = note: required for `std::ops::Range<{integer}>` to implement `~const IntoIterator`

error[E0308]: mismatched types
  --> $DIR/issue-50585.rs:2:18
   |
LL |     |y: Vec<[(); for x in 0..2 {}]>| {};
   |                  ^^^^^^^^^^^^^^^^ expected `usize`, found `()`

error: aborting due to 3 previous errors

Some errors have detailed explanations: E0277, E0308, E0658.
For more information about an error, try `rustc --explain E0277`.
